--- a/boatmigrator/index.html
+++ b/boatmigrator/index.html
@@ -6,12 +6,20 @@
     </head>
 
     <body>
-        <form id="form">
-            <input type="text" name="subject" id="subject">
-            <input type="submit" value="Submit">
-        </form>
+        <div id="ui">
+            <form id="form">
+                <input type="text" name="subject" id="subject">
+                <input type="submit" value="Submit">
+            </form>
 
-        <div id="asd"></div>
+            <fieldset>
+                <label for="year">year</label>
+                <input type="range" min="1800" max="2000" id="year" step="5" value="0">
+                <output for="year" id="year_out">1800</output>
+            </fieldset>
+        </div>
+        <div id="viz">
+        </div>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/d3/4.3.0/d3.min.js"></script>    
         <script>
@@ -22,7 +30,7 @@
 
             var path = d3.geoPath().projection(projection);　
 
-            var map = d3.select("body")
+            var map = d3.select("#viz")
                 .append("svg")
                 .attr("width", 960)
                 .attr("height", 800);
@@ -35,44 +43,104 @@
                     .enter()
                     .append("path")
                     .attr("d", path)
-                    .attr("fill", "green")
-                    .attr("fill-opacity", 0.5)
-                    .attr("stroke", "#222");    
+                    .attr("fill", "#000")
+                    .attr("fill-opacity", 0.03)
+                    .attr("stroke", "#222");
             }
 
-            function drawMigration(geojson) {
-                console.log(geojson);
-                map.selectAll("circle")
-                    .data(geojson).enter()
-                    .append("circle")
-                    .attr("cx", function (d) { return projection(d)[0]; })
-                    .attr("cy", function (d) { return projection(d)[1]; })
-                    .attr("r", "4px")
-                    .attr("fill", "red")
+            var migrationData = [];
+
+            function interpolate(dictionary, year) {
+                console.log(year, parseInt(Object.keys(dictionary)[0]), year < parseInt(Object.keys(dictionary)[0]));
+                if (year < parseInt(Object.keys(dictionary)[0])) {
+                    return 0;
+                }
+
+                var prev = 0;
+                for (var key in dictionary) {
+                    var ikey = parseInt(key);
+                    var value = dictionary[key];
+                    if (ikey < year) {
+                        prev = value;
+                    }
+                    if (ikey == year) {
+                        return value;
+                    }
+                    if (ikey > year) {
+                        return prev + Math.abs(prev+value) / 2;
+                    }
+                }
+                return 0;
             }
+
+            document.querySelector("#year").addEventListener("change",
+                function(e) {
+                    var year = document.getElementById("year").value;
+                    document.querySelector('#year_out').value = year;
+                    console.log(year);
+
+                    var max = 2;
+                    for (var i = 0; i < migrationData.length; i++) {
+                        var d = migrationData[i][1];
+                        for (var key in d) {
+                            if (d[key] > max) {
+                                max = d[key];
+                            }
+                        }
+                    }
+                    console.log(max);
+
+                    map.selectAll("circle").remove();
+
+                    map.selectAll("circle")
+                        .data(migrationData).enter()
+                        .append("circle")
+                        .attr("cx", function (d) { return projection(d[0])[0]; })
+                        .attr("cy", function (d) { return projection(d[0])[1]; })
+                        .attr("r", function (d) {
+                            var inter = interpolate(d[1], year);
+                            var norm = 10 + (inter / max) * 48;
+                            return norm;
+                        })
+                        .attr("fill", function (d) {
+                            var inter = interpolate(d[1], year);
+                            if (inter == 0) {
+                                return "#00000000";
+                            }
+
+                            var norm = 64 + (inter / max) * 128;
+                            var r_hex = parseInt(norm).toString(16);
+                            var padded = (r_hex.length<2) ? "0"+r_hex : r_hex;
+
+                            return "#0000ff" + padded;
+                        });
+                    e.preventDefault();
+                }
+            );
+
 
             document.querySelector("#form").addEventListener("submit",
                 function(e) {
                     var xmlhttp = new XMLHttpRequest();
                     var subject = document.getElementById("subject").value;
                     var url = "/api/" + subject;
-                    d3.json(url, drawMigration);
                     
-                    /*xmlhttp.onreadystatechange = function() {
+                    xmlhttp.onreadystatechange = function() {
                         if (this.readyState == 4 && this.status == 200) {
                             var data = JSON.parse(this.responseText);
-                            
 
-                            var out = "";
+                            migrationData = data;
+
+                            /*var out = "";
                             for(var i = 0; i < data.length; i++) {
                                 out += data[i] + '<br>';
                             }
-                            document.getElementById("asd").innerHTML = out;
+                            document.getElementById("asd").innerHTML = out;*/
                         }
                     };
 
                     xmlhttp.open("GET", url, true);
-                    xmlhttp.send();*/
+                    xmlhttp.send();
 
                     e.preventDefault();
                 }
